--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ data/
 old data/
 testimage/
 model/
+sampled_data/
 # Ignore text files
 *.txt
 # Ignore any other unnecessary files (e.g., temporary files)
